--- a/src/index.scss
+++ b/src/index.scss
@@ -12,7 +12,10 @@ body {
   font-family: $font-hei;
   font-size: 16px;
   line-height: 1.2;
-  background-color: #f5f5f5;
+  background: #f5f5f5;
+}
+button {
+  font-family: inherit;
 }
 :focus {
   outline: none;
@@ -21,4 +24,14 @@ body {
   width: 1em;
   height: 1em;
   display: inline-block;
+}
+.clearfix::after {
+  content: '';
+  display: block;
+  clear: both;
+}
+.oneLine {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
