--- a/src/index.scss
+++ b/src/index.scss
@@ -18,3 +18,46 @@ body{
   width: 1em;
   height: 1em;
 }
+
+.card-container.card {
+  max-width: 350px !important;
+  padding: 40px 40px;
+}
+
+.card {
+  background-color: #fff;
+  padding: 20px 25px 30px;
+  margin: 0 auto 25px;
+  margin-top: 0px;
+  // -moz-border-radius: 2px;
+  // -webkit-border-radius: 2px;
+  // border-radius: 2px;
+  // -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  // -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  // box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  border:none
+}
+.btn-submit{
+  position: absolute;
+  margin-top: 10px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  color: #525252;
+  background-color: #ffda44;
+  border: none;
+  
+}
+dl, ol, ul {
+  margin-top: 0;
+   margin-bottom: 0;
+}
+
+.profile-img-card {
+  width: 300px;
+  height: auto;
+  margin: 0 auto 10px;
+  display: block;
+  -moz-border-radius: 5%;
+  -webkit-border-radius: 5%;
+  border-radius: 5%;
+}
